internal/dataplane/parser/testdata/golden/plugins/in.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: kong-ca
  labels:
    konghq.com/ca-cert: "true"
  annotations:
    kubernetes.io/ingress.class: kong
type: Opaque
data:
  id: c2VjcmV0LWlkCg==
  cert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR0VENDQXAyZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBRENCZ3pFTE1Ba0dBMVVFQmhNQ1ZWTXgKRXpBUkJnTlZCQWdUQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjVERWTmhiaUJHY21GdVkybHpZMjh4SlRBagpCZ05WQkFrVEhERTFNQ0JUY0dWaGNpQlRkSEpsWlhRc0lGTjFhWFJsSURFMk1EQXhEakFNQmdOVkJCRVRCVGswCk1UQTFNUkF3RGdZRFZRUUtFd2RMYjI1bklFaFJNQjRYRFRJek1Ea3lOakE0TkRRek5Wb1hEVEkwTURreU5qQTQKTkRRek5Wb3dnWU14Q3pBSkJnTlZCQVlUQWxWVE1STXdFUVlEVlFRSUV3cERZV3hwWm05eWJtbGhNUll3RkFZRApWUVFIRXcxVFlXNGdSbkpo [...]
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-other
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    konghq.com/plugins: kong-id
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-other
  annotations:
    konghq.com/plugins: kong-id
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /httpbin-diff
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin
            port:
              number: 80
      - path: /httpbin-other
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin-other
            port:
              number: 80
---
apiVersion: configuration.konghq.com/v1
kind: KongPlugin
metadata:
  name: kong-id
config:
  header_name: kong-id
plugin: correlation-id
---
apiVersion: configuration.konghq.com/v1
kind: KongPlugin
metadata:
  name: kong-id
config:
  header_name: kong-id-2
plugin: correlation-id
